--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,14 @@ dependencies:
     sdk: flutter
 
   english_words: ^4.0.0
+  path_provider: ^2.1.5
   provider: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  intl: ^0.20.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
