--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   english_words: ^4.0.0
   path_provider: ^2.1.5
   provider: ^6.0.0
+  wheel_picker: ^0.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
